# bevy_brp

./: .gitignore  .todo.json  CLAUDE.md  Cargo.toml  EXPECTED_CHANGES.md  INTEGRATION_TEST_REVIEW_TODO.md  PARAMETER_MIGRATION_STATUS.md  README.md  TECH_DEBT.md  TestComplexComponent.json  TestEnumWithSerDe.json  TestEnumWithSerDe_fixed.json  TestEnumWithSerde.json  TestEnumWithSerde_mutation_paths.json  TestVariantChainEnum.json  TestVariantChainEnum_fixed.json  TestVariantChainEnum_new.json  camera.json  mend.toml  old_sprite.json  plan-0-type-safe-signatures.md  plan-1-defer-grouping.md  plan-applicable-variants.md  plan-assemble.md  plan-build-path.md  plan-builder-example.md  plan-code-review.md  plan-entity.md  plan-enum-variant-knowledge.md  plan-examples.md  plan-fix-test.md  plan-instance-count.md  plan-investigate-recursion.md  plan-map-builder.md  plan-mutate-final-fix.md  plan-mutate.md  plan-mutation-support.md  plan-not-mutatable.md  plan-opaque.md  plan-option.md  (+30 more)
extras/: CHANGELOG.md  Cargo.toml  README.md
extras/examples/: agent_tool_registration.rs  custom_http_plugin.rs  custom_port.rs  default_port.rs
extras/src/: constants.rs  debug_mode.rs  diagnostics.rs  find_by_name.rs  keyboard.rs  lib.rs  mouse.rs  plugin.rs  screenshot.rs  screenshot_entity.rs  shutdown.rs  snapshot.rs  window_event.rs  window_title.rs
extras/src/agent_tools/: catalog.rs  mod.rs  registration.rs
extras/src/discovery/: core.rs  examples.rs  format.rs  handler.rs  mod.rs  mutation.rs  serialization_format.rs  types.rs
extras/src/keyboard/: constants.rs  events.rs  key_code.rs  keys.rs  mod.rs  typing.rs
extras/src/mouse/: button.rs  click.rs  constants.rs  cursor.rs  drag.rs  gestures.rs  mod.rs  scroll.rs  support.rs
extras/src/screenshot/: aabb.rs  mod.rs  request.rs  ui.rs
extras/tests/: agent_tool_registration.rs
mcp/: .todo.json  CHANGELOG.md  Cargo.toml  README.md
mcp/help_text/: bevy_destroy.txt  bevy_get.txt  bevy_get_resource.txt  bevy_insert.txt  bevy_insert_resource.txt  bevy_list.txt  bevy_list_resources.txt  bevy_list_watch.txt  bevy_mutate_component.txt  bevy_mutate_resource.txt  bevy_query.txt  bevy_registry_schema.txt  bevy_remove.txt  bevy_remove_resource.txt  bevy_reparent.txt  bevy_rpc_discover.txt  bevy_spawn.txt  brp_all_type_guides.txt  brp_all_type_schemas.txt  brp_delete_logs.txt  brp_execute.txt  brp_extras_click_mouse.txt  brp_extras_discover_format.txt  brp_extras_double_click_mouse.txt  brp_extras_double_tap_gesture.txt  brp_extras_drag_mouse.txt  brp_extras_find_entities_by_name.txt  brp_extras_get_diagnostics.txt  brp_extras_move_mouse.txt  brp_extras_pinch_gesture.txt  brp_extras_rotation_gesture.txt  brp_extras_screenshot.txt  brp_extras_screenshot_entity.txt  brp_extras_scroll_mouse.txt  brp_extras_send_keys.txt  brp_extras_send_mouse_button.txt  brp_extras_set_debug_mode.txt  brp_extras_set_window_title.txt  brp_extras_snapshot.txt  brp_extras_type_text.txt  (+38 more)
mcp/help_text/app_tools/: brp_launch_bevy_app.txt  brp_launch_bevy_example.txt
mcp/help_text/brp_tools/: bevy_get_watch.txt  bevy_list_watch.txt  brp_set_tracing_level.txt
mcp/help_text/log_tools/: brp_delete_logs.txt
mcp/src/: constants.rs  error.rs  extraction.rs  handler.rs  json_field_access.rs  json_object.rs  json_schema.rs  json_types.rs  main.rs  mcp_service.rs  registry.rs  serde_helpers.rs  service.rs  string_traits.rs  support.rs  tool_definitions.rs  tool_generator.rs  tool_handler.rs  tools.rs
mcp/src/app_tools/: brp_extras_shutdown.rs  brp_launch_bevy_app.rs  brp_launch_bevy_example.rs  brp_list_bevy.rs  brp_list_bevy_apps.rs  brp_list_bevy_examples.rs  brp_list_brp_apps.rs  brp_shutdown.rs  brp_status.rs  constants.rs  instance_count.rs  launch_handlers.rs  launch_params.rs  mod.rs  process.rs
mcp/src/brp_tools/: brp_client.rs  brp_execute.rs  brp_get_trace_log_path.rs  brp_set_debug_mode.rs  brp_set_tracing_level.rs  brp_status.rs  constants.rs  handler.rs  http_client.rs  json_rpc_builder.rs  mod.rs  mouse.rs  parameters.rs  port.rs  types.rs
mcp/src/extractors/: bevy_response.rs  field_extractor.rs  mcp_call.rs  mod.rs  types.rs
mcp/src/field_extraction/: core_response_fields.rs  extraction.rs  mod.rs  parameters.rs  response_fields.rs
mcp/src/log_tools/: cleanup_logs.rs  constants.rs  delete_logs.rs  get_trace_log_path.rs  lazy_file_writer.rs  list_logs.rs  mod.rs  read_log.rs  set_tracing_level.rs  support.rs  tracing.rs
mcp/src/response/: builder.rs  components.rs  constants.rs  extraction.rs  field_extractor.rs  field_placement.rs  field_placement_traits.rs  fields.rs  formatter.rs  large_response.rs  local_handlers.rs  local_tool_results.rs  mod.rs  response_def.rs  response_fields.rs  specification.rs  template_substitution.rs  types.rs
mcp/src/service/: base_context.rs  brp_context.rs  handler_context.rs  local_context.rs  mcp_service.rs  mod.rs
mcp/src/support/: json_object.rs  json_schema.rs  large_response.rs  lazy_file_writer.rs  mod.rs  params.rs  response.rs  schema.rs  tracing.rs
mcp/src/tool/: annotations.rs  brp_handler.rs  brp_parameters.rs  brp_tool_def.rs  constants.rs  def.rs  definitions.rs  definitions.rs.backup  definitions_old.rs  facade.rs  mod.rs  (+25 more)
mcp_macros/: CHANGELOG.md  Cargo.toml  README.md
mcp_macros/src/: brp_tools.rs  constants.rs  field_extraction.rs  field_placement.rs  lib.rs  param_struct.rs  result_struct.rs  shared.rs  tool_description.rs  tool_fn.rs
test-app/: Cargo.toml
test-app/examples/: event_test.rs  extras_plugin.rs  mouse_test.rs  no_extras_plugin.rs  test_app.rs  type_validation.json
test-app/tests/: excluded_types.txt  merge_batch_results.sh  renumber_batches.sh  transform_brp_response.sh  type_stats.sh
test-apps/: Cargo.toml
test-apps/examples/: extras_plugin.rs
test-duplicate-a/: Cargo.toml
test-duplicate-a/examples/: extras_plugin_duplicate.rs  test_app.rs
test-duplicate-a/test-app/: Cargo.toml
test-duplicate-b/: Cargo.toml
test-duplicate-b/examples/: extras_plugin_duplicate.rs
test-duplicate-b/test-app/: Cargo.toml
test-wasm/: Cargo.toml
test-wasm/src/: main.rs
(+819 files in other folders)
