[workspace]
members = [
  "extras",
  "mcp",
  "mcp_macros",
  "test-app",
  "test-duplicate-a",
  "test-duplicate-b",
]
resolver = "2"

[workspace.package]
repository = "https://github.com/natepiano/bevy_brp"

[workspace.dependencies]
# Bevy with no default features - each crate specifies what it needs
bevy            = { version = "0.19.0", default-features = false }
bevy_brp_extras = { path = "extras" }
bevy_kana       = "0.1.0"
bevy_mesh       = { version = "0.19.0" }
bevy_remote     = { version = "0.19.0", default-features = false }
bevy_winit      = { version = "0.19.0" }

# Core dependencies (shared between extras and mcp)
anyhow = "1.0"
async-channel = "2.5.0"
async-trait = "0.1.89"
bevy_brp_mcp_macros = { version = "0.23.0-dev", path = "mcp_macros" }
cargo_metadata = "0.23"
chrono = "0.4"
either = "1.16"
error-stack = { version = "0.8.0", features = ["spantrace"] }
futures = "0.3"
heck = "0.5.0"
image = { version = "=0.25.9", default-features = false, features = ["png"] }
itertools = "0.15.0"
json-pretty-compact = "0.1.2"
netstat2 = "0.11"
nom = "8.0.0"
once_cell = "1.21.4"
paste = "1.0"
proc-macro2 = "1.0.106"
quote = "1.0.46"
regex = "1.13.1"
reqwest = { version = "0.13.4", features = ["blocking", "json", "stream"] }
rmcp = { version = "2.2.0", features = ["server", "transport-io"] }
schemars = "1.2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.150", features = ["preserve_order"] }
strum = "0.28.0"
strum_macros = "0.28.0"
syn = { version = "2.0.119", features = ["extra-traits", "full"] }
sysinfo = "0.39.6"
tempfile = "3.27.0"
thiserror = "2.0"
tokio = { version = "1.52.3", features = ["full", "signal"] }
tokio-stream = "0.1.18"
tokio-util = { version = "0.7", features = ["codec"] }
tracing = { version = "0.1.44", features = [
  "max_level_trace",
  "release_max_level_trace",
] }
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Shared lints configuration
[workspace.lints.rust]
missing_docs = "deny"

[workspace.lints.clippy]
allow_attributes_without_reason = "deny"
expect_used                     = "deny"
panic                           = "deny"
self_named_module_files         = "deny" # use module/mod.rs (directory form) when a module has submodules
unreachable                     = "deny"
unwrap_used                     = "deny"

# Enable lint groups as errors (with lower priority so allows can override)
all      = { level = "deny", priority = -1 }
cargo    = { level = "deny", priority = -1 }
nursery  = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }

# Allow specific lints that conflict with Bevy patterns
multiple_crate_versions = "allow"
needless_pass_by_value  = "allow"
option_if_let_else      = "allow"
redundant_pub_crate     = "allow" # cargo mend is the visibility authority, not clippy
too_many_arguments      = "allow"
type_complexity         = "allow"
