[package]
authors = ["natepiano <slicks.curable.0k@icloud.com>"]
categories = [
  "development-tools",
  "development-tools::debugging",
  "game-development",
]
description = "Extra BRP methods for Bevy apps including screenshot, shutdown, and keyboard input capabilities"
edition = "2024"
keywords = ["bevy", "brp", "debugging", "gamedev", "remote"]
license = "MIT OR Apache-2.0"
name = "bevy_brp_extras"
readme = "README.md"
repository.workspace = true
version = "0.19.0-dev"

[dependencies]
# Extras needs many Bevy features
bevy = { workspace = true, features = [
  "bevy_core_pipeline",
  "bevy_log",
  "bevy_remote",
  "bevy_render",
  "bevy_sprite",
  "bevy_text",
  "bevy_ui",
  "serialize",
  "bevy_window",
  "bevy_winit",
  "default_font",
  "gamepad",
  "png",
  "x11",
] }

serde.workspace        = true
serde_json.workspace   = true
smol_str               = "0.2"
strum.workspace        = true
strum_macros.workspace = true
thiserror.workspace    = true

[dev-dependencies]
reqwest.workspace = true

[lints]
workspace = true
