[package]
authors = ["natepiano <slicks.curable.0k@icloud.com>"]
categories = [
  "development-tools",
  "development-tools::debugging",
  "game-development",
]
description = "Extra BRP methods for Bevy apps including screenshot, shutdown, and keyboard input capabilities"
edition = "2024"
keywords = ["bevy", "brp", "debugging", "gamedev", "remote"]
license = "MIT OR Apache-2.0"
name = "bevy_brp_extras"
readme = "README.md"
repository.workspace = true
version = "0.18.4"

[dependencies]
# Extras needs many Bevy features
bevy = { workspace = true, features = [
  "bevy_core_pipeline",
  "bevy_log",
  "bevy_render",
  "bevy_sprite",
  "bevy_text",
  "bevy_ui",
  "serialize",
  "bevy_window",
  "bevy_winit",
  "default_font",
  "gamepad",
  "png",
] }

# Direct dependency to control default features (bevy/bevy_remote pulls in HTTP transport
# which requires async-io and doesn't compile on wasm32)
bevy_remote = { version = "0.18", default-features = false }

serde.workspace        = true
serde_json.workspace   = true
smol_str.workspace     = true
strum.workspace        = true
strum_macros.workspace = true
thiserror.workspace    = true

# On native, enable HTTP transport and x11 platform backend
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy = { workspace = true, features = ["x11"] }
bevy_remote = { version = "0.18" }

[features]
default     = ["diagnostics"]
diagnostics = []

[dev-dependencies]
reqwest.workspace = true

[lints]
workspace = true
