[package]
edition = "2024"
name    = "bevy_brp_test_apps"
publish = false                # Never publish test apps
version = "0.3.0"

# Disable automatic discovery to ensure explicit control
autobins     = false
autoexamples = false

# Binary definitions
[[bin]]
name = "test_app"
path = "src/bin/test_app.rs"

# Example definitions
[[example]]
name = "extras_plugin"
path = "examples/extras_plugin.rs"

[[example]]
name = "no_extras_plugin"
path = "examples/no_extras_plugin.rs"


[dependencies]
bevy_brp_extras = { path = "../extras" }
bevy_mesh       = { workspace = true }
bevy_winit      = { workspace = true }
serde           = { workspace = true }

# Test apps use same features as extras
bevy = { workspace = true, features = [
  "bevy_core_pipeline",
  "bevy_gltf",
  "bevy_log",
  "bevy_remote",
  "bevy_render",
  "bevy_sprite",
  "bevy_text",
  "bevy_ui",
  "bevy_window",
  "bevy_winit",
  "default_font",
  "png",
  "x11",
] }

[lints]
workspace = true

# Exclude from cargo-release
[package.metadata.release]
release = false
