[package]
edition = "2024"
name    = "bevy_brp_test_apps"
publish = false                # Never publish test apps
version = "0.18.0-dev"

# Disable automatic discovery to ensure explicit control
autobins     = false
autoexamples = false

# Binary definitions
[[bin]]
name = "test_app"
path = "src/bin/test_app.rs"

# Example definitions
[[example]]
name = "extras_plugin"
path = "examples/extras_plugin.rs"

[[example]]
name = "no_extras_plugin"
path = "examples/no_extras_plugin.rs"

[[example]]
name = "event_test"
path = "examples/event_test.rs"


[dependencies]
bevy_brp_extras = { path = "../extras" }
bevy_mesh       = { workspace = true }
bevy_winit      = { workspace = true }
serde           = { workspace = true }

# Test apps use same features as extras
bevy = { workspace = true, default-features = true }

[lints]
workspace = true

# Exclude from cargo-release
[package.metadata.release]
release = false
