[package]
edition = "2024"
name    = "bevy_brp_test_apps"
publish = false                # Never publish test apps
version = "0.1.0"

# Binaries that point to example files - discoverable as apps
[[bin]]
name = "extras_plugin"
path = "examples/extras_plugin.rs"

[[bin]]
name = "no_extras_plugin"
path = "examples/no_extras_plugin.rs"

# Examples - discoverable as examples
[[example]]
name = "extras_plugin"

[[example]]
name = "no_extras_plugin"

[dependencies]
bevy_brp_extras = { path = "../extras" }
# Test apps use same features as extras
bevy = { workspace = true, features = [
  "bevy_core_pipeline",
  "bevy_log",
  "bevy_remote",
  "bevy_render",
  "bevy_sprite",
  "bevy_text",
  "bevy_ui",
  "bevy_window",
  "bevy_winit",
  "default_font",
  "png",
  "x11",
] }

[lints]
workspace = true
