[package]
categories           = ["development-tools::testing"]
description          = "Test infrastructure for path disambiguation testing"
edition              = "2024"
keywords             = ["bevy", "brp", "testing"]
license              = "MIT OR Apache-2.0"
name                 = "test-app-a"
publish              = false
readme               = "../test-app/README.md"
repository.workspace = true
version              = "0.3.0"

# TEST INFRASTRUCTURE - Path Disambiguation Testing
#
# This package exists to test path disambiguation when multiple examples have the same name.
# Both test-duplicate-a and test-duplicate-b contain an example named `extras_plugin_duplicate`,
# which tests the MCP's ability to handle duplicates via the `path` parameter.
[[example]]
name = "extras_plugin_duplicate"
path = "examples/extras_plugin_duplicate.rs"

[dependencies]
bevy = { workspace = true, default-features = false, features = [
  "bevy_remote",
] }
bevy_brp_extras = { path = "../extras" }
